<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Settings">

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:onClick="btnClk_EditUserProfile"
        android:text="Edit Profile" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newUserHeader"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:text="User Name: "
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/txtEditId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter a user name"
                android:inputType="textPersonName"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:text="User Name: "
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/txtEditUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter a user name"
                android:inputType="textPersonName"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password: " />

            <EditText
                android:id="@+id/txtEditPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter a password"
                android:inputType="textPassword"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First Name:" />

            <EditText
                android:id="@+id/txtEditFName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter your first name"
                android:inputType="textPersonName"
                android:text="" />
        </TableRow>

 <!--       <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Last Name:" />

            <EditText
                android:id="@+id/txtEditLName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter your last name"
                android:inputType="textPersonName"
                android:text="" />
        </TableRow>-->

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Address:" />

            <EditText
                android:id="@+id/txtEditAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter your address"
                android:inputType="textPersonName"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email:" />

            <EditText
                android:id="@+id/txtEditEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter email"
                android:inputType="textPersonName"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Phone:" />

            <EditText
                android:id="@+id/txtEditPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter phone number"
                android:inputType="number"
                android:text="" />
        </TableRow>

        <TableRow>

            <!--<TextView android:text="Type: " />

            <RadioGroup
                android:id="@+id/radGrpRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radRolePt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Patient" />

                <RadioButton
                    android:id="@+id/radRoleDr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Provider" />

                <RadioButton
                    android:id="@+id/radRoleAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="Admin"
                    android:visibility="gone" />
            </RadioGroup>-->
        </TableRow>

        <TableRow android:paddingTop="20dp">

            <Button
                android:id="@+id/btnUpdateUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:onClick="btnClk_UpdateUser"
                android:text="Update User Profile"
                tools:background="@android:color/holo_blue_dark" />


        </TableRow>
        <TableRow android:paddingTop="20dp">

            <Button
                android:id="@+id/btnDeleteUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@color/colorPrimary"
                android:onClick="btnClk_DeleteUser"
                android:text="Delete User" />


        </TableRow>
    </TableLayout>
<!--    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Set Default Location" />-->
</LinearLayout>
</android.support.v7.widget.CardView>