...

        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/btnSettings"
                android:layout_height="match_parent"
                android:background="#efc94c"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="clk_Settings"
                android:orientation="vertical">

...
